--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~font-awesome/css/font-awesome.css';
+@import "~weather-icons/css/weather-icons.css";
+
+body {
+  font-family: sans-serif;
+  height: 100vh;
+  /*background-color: #5de6de;
+  background-image: linear-gradient(315deg, #5de6de 0%, #b58ecc 74%);*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #5de6de;
+  background-image: linear-gradient(315deg, #5de6de 0%, #b58ecc 74%);
+}
+
+.color-blue {
+  color: #1d428a;
+}
